[package]
name = "sf-primitives"
version = "0.1.0"
authors = ['Alex Rozgo <alex.rozgo@gmail.com>']
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
serde = { version = "1.0.101", optional = true }
sp-core = { git = "https://github.com/SugarFunge/substrate.git", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-core/std"
]
